we now have a java app that can talk to the pi